# circuitpainter

./: .buildinfo  .gitignore  .pylintrc  CNAME  DEVELOPMENT.md  LICENSE  Makefile  README.md  advanced_usage.html  api.html  asterix.py  concepts.html  examples.html  genindex.html  getting_started.html  hello_painter.py  index.html  installation.html  introduction.html  notes.html  objects.inv  pcb_painter.py  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: advanced_usage.doctree  api.doctree  concepts.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  installation.doctree  introduction.doctree  notes.doctree
.github/workflows/: documentation.yml
_sources/: advanced_usage.rst.txt  api.rst.txt  concepts.rst.txt  examples.rst.txt  getting_started.rst.txt  introduction.rst.txt
doc/: advanced_usage.rst  api.rst  conf.py  examples.rst  getting_started.rst  index.rst  installation.rst  notes.rst
examples/: arc_test.py  asterix.py  hello_painter.py  hex_perfboard.py  learn_to_solder_example.py  lotus_leds.py  path_test.py  perfboard.py
src/circuitpainter/: __init__.py  circuitpainter.py  transform_matrix.py
src/pcb_painter/: __init__.py  pcb_painter.py
